Recipe 2024 rules added

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ table th.field-col {
           <option value="">— Choose a matrix type —</option>
           <option value="rules/[Article] 2024.json">[Article] 2024</option>
           <option value="rules/[Product] 2024.json">[Product] 2024</option>
+          <option value="rules/[Recipe] 2024.json">[Recipe] 2024</option>
           <!-- додайте інші файли сюди -->
         </select>
       </label>
@@ -1136,6 +1137,7 @@ backToTopBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
